[package]
edition = "2021"
name = "bellman-example"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellman = "0.11.1"
bit-vec = "0.4.4"
byteorder = "1"
ff = "0.11"
group = "0.6"
pairing = "0.16"
rand = "0.8"
rand_core = "0.5"
sha2 = "0.9.1"
bls12_381 = "0.6.0"
